force-app/main/default/objects/SBQQ__OptionConstraint__c.object
<CustomObject>
    <customHelpPage>SBQQ__OptionConstraintHelp</customHelpPage>
    <description>Product option constraint. Constraints govern which options must or must not be selected together.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks this constraint as active or inactive.</description>
        <inlineHelpText>Marks this constraint as active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckPriorPurchases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows you to check on past purchases in the Account.</description>
        <inlineHelpText>Check if you want to look up prior purchases of Constraining Option within the Account.</inlineHelpText>
        <label>Check Prior Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU which configuration is being constrained.</description>
        <inlineHelpText>Product SKU being constrained.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Option Constraints</relationshipLabel>
        <relationshipName>Option_Constraints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConstrainedOption__c</fullName>
        <description>Option that&apos;s being constrained.</description>
        <inlineHelpText>Select the option in the bundle that you want applied to this constraint.</inlineHelpText>
        <label>Constrained Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__ProductOption__c.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Constraints</relationshipLabel>
        <relationshipName>Constraints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConstrainingOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Option that&apos;s constraining another option.</description>
        <inlineHelpText>Choose an additional option if the Constrained Option is constraining another option.</inlineHelpText>
        <label>Constraining Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductOption__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Constraining</relationshipLabel>
        <relationshipName>Constraining</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionConstraintGroup__c</fullName>
        <description>Allows you to apply multiple constraints on a single option.</description>
        <inlineHelpText>If multiple Option Constraints target the same Constrained Option, putting the Option Constraints in the same group will require ALL Constraining Options to be selected.</inlineHelpText>
        <label>Option Constraint Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Determines behavior of this constraint.</description>
        <inlineHelpText>Choose the behavior of this constraint: dependency means inclusion is required while exclusion means the option constraint is not selected when the constraining option is or vice versa.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dependency</fullName>
                    <default>true</default>
                    <label>Dependency</label>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Option Constraint</label>
    <nameField>
        <label>Constraint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>